# Silverfir

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.cmd  build.py  build.sh  build_clang.cmd  build_clang_dbg.cmd  build_clang_reldbg.cmd  build_spectest.py  env.cmd  run_spectest.py
docs/: Interpreter.md
src/: CMakeLists.txt  silverfir.cmake
src/common/: op_decoder.c  op_decoder.h  opcode.c  opcode.h  silverfir.h  wasm_format.c  wasm_format.h
src/host/: host_modules.c  host_modules.h  trampo_gen.py  trampoline.h
src/host/spectest/: spectest.wat  spectest_gen.c  spectest_gen.h  spectest_impl.c
src/host/wasi/: wasi.wat  wasi_gen.c  wasi_gen.h  wasi_impl_uv.c  wasi_impl_uv.h
src/interpreter/: const_expr_eval.c  in_place_dt.c  in_place_tco.c  interpreter.c  interpreter.h
src/jit/: ir_builder.c  ir_builder.h
src/platform/: compiler.h
src/platform/gcc_clang/: gcc_clang.h
src/platform/msvc/: msvc.h
src/runtime/: module.c  module.h  parser.c  parser.h  runtime.c  runtime.h  validator.c  validator.h  vm.c  vm.h
src/utils/: alloc.h  containers_impl.c  coverage.h  list.h  list_impl.h  logger.c  logger.h  mem_util.h  option.h  result.h  sjson.c  sjson.h  smath.h  str.c  str.h  stream.h  types.h  utf8.c  utf8.h  vec.h  vec_impl.h  vstr.c  vstr.h
test/: CMakeLists.txt  spec_gen.sh  spectest.py
test/coverage/: summary.c
test/harness/: harness_main.c  spec_test.c  spec_test.h
test/perf/binarytree/: binary-trees.c  binary-trees.wasm
test/perf/coremark/: README.md
test/sf_loader/: loader_main.c
test/unit/: hello_wasm.c  hello_wasm.h  leb128_cases.c  leb128_cases.h  list_test.c  mem_test.c  option_test.c  parser_test.c  result_test.c  runtime_test.c  sjson_test.c  smath_test.c  stream_test.c  test_containers.c  test_containers.h  unittest_main.c  vec_test.c
